# BitmapToNV21

./: README.md  clear_build_cache.bat
app/: build.gradle
app/src/androidTest/java/com/arcsoft/bitmaptonv21/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/prebuilts/inc/ImageBase/: amcm.h  amcmerrdef.h  amimgcodec.h  amimgerror.h  mddef.h  mdexif.h  mdutils.h
app/src/main/cpp/prebuilts/inc/common/: amdisplay.h  amkernel.h  amplat.h  ampostprocess.h  amstream.h  amstring.h  platform_export.h
app/src/main/cpp/src/: native-lib.cpp
app/src/main/cpp/src/ImageUtils/: PostProcess.cpp  PostProcess.h  Utils_MBitmapAndroidBitmap.cpp  Utils_MBitmapAndroidBitmap.h
app/src/main/cpp/src/utils/: LogUtil.h
app/src/main/java/com/arcsoft/bitmaptonv21/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/test/java/com/arcsoft/bitmaptonv21/: ExampleUnitTest.java
debug/: pull.bat
debug/nv21result/: 1552114569401_06de233c_1080_1080x1704.nv21  mmexport1552809762827_700_700x679.nv21
gradle/wrapper/: gradle-wrapper.properties
